# kaizen

./: .bob  .env.example  .gitignore  .pre-commit-config.yaml  .roomodes  .secrets.baseline  404.html  AGENTS.md  CHANGELOG.md  CLAUDE_CODE_DEMO.md  CLI.md  CONFIGURATION.md  CONTRIBUTING.md  DOCKER_TESTING.md  Dockerfile.core  KAIZEN_LITE.md  MANIFEST.in  README.md  README_extract_trajectories.md  README_phoenix_sync.md  SAVE_SKILL_DESIGN.md  extract_trajectories.py  index.html  justfile  mkdocs.yaml  pyproject.toml  sitemap.xml
.bob/: custom_modes.yaml  custom_modes.yaml.backup.20260319_080724  custom_modes.yaml.backup.20260319_115836  custom_modes.yaml.backup.20260319_131446
.bob/commands/: kaizen:learn.md  kaizen:recall.md
.bob/skills/kaizen-learn/: SKILL.md
.bob/skills/kaizen-learn/scripts/: save.py
.bob/skills/kaizen-recall/: SKILL.md
.github/actions/run-tests/: action.yaml
.github/scripts/: verify_upstream.sh
.github/workflows/: check-code.yaml  docker-publish.yml  publish-pypi.yaml  publish-testpypi.yaml  python-publish.yml  release-github.yaml
LOW_CODE_TRACING/: index.html
POLICIES/: index.html
altk_evolve/config/: evolve.py
altk_evolve/frontend/mcp/: mcp_server.py
altk_evolve/llm/guidelines/: guidelines.py  segmentation.py
altk_evolve/schema/: guidelines.py
altk_evolve/sync/: phoenix_sync.py
archive/save-session-as-skill-design/: index.html
demo/filesystem/: server.py  states.txt
demo/workdir/: .mcp.json  CLAUDE.md
demo/workdir/.claude/: settings.local.json
docs/: LOW_CODE_TRACING.md  POLICIES.md  index.md
docs/archive/: save-session-as-skill-design.md
docs/examples/hello_world/: bob.md  claude.md  codex.md  index.md
docs/guides/: backend-configuration.md  configuration.md  extract-trajectories.md  low-code-tracing.md  phoenix-sync.md
docs/installation/: index.md
docs/integrations/: evolve-lite.md
docs/integrations/claude/: evolve-lite.md
docs/integrations/roo-code/: SETUP_ROO_MODE.md
docs/operations/: docker-testing.md
docs/overrides/: main.html
docs/reference/: cli.md  policies.md
docs/stylesheets/: extra.css
docs/tutorials/: claude-code-demo.md  index.md
evolve/backend/: postgres.py
examples/: index.html
examples/hello_world/: index.html
examples/hello_world/bob/: index.html
examples/hello_world/claude/: index.html
examples/hello_world/codex/: index.html
examples/low_code/: litellm_demo.py  local_mcp_server.py  manual_phoenix_demo.py  openai_agents_demo.py  simple_openai.py  smolagents_demo.py
explorations/claudecode/: README.md  litellm-config.yaml  pyproject.toml
explorations/policy_generation/: README.md  demo_output_formatter_generation.py  output_formatter.py
explorations/policy_generation/prompts/: generate_output_formatter.jinja2
getting_started/: index.html
guides/configuration/: index.html
guides/extract-trajectories/: index.html
guides/low-code-tracing/: index.html
guides/phoenix-sync/: index.html
installation/: index.html
integrations/claude/evolve-lite/: index.html
integrations/roo-code/SETUP_ROO_MODE/: index.html
integrations/roo_code/: Kaizen-export.yaml  index.html
kaizen/auto/: __init__.py
kaizen/backend/: base.py  filesystem.py  milvus.py
kaizen/cli/: cli.py
kaizen/config/: filesystem.py  kaizen.py  llm.py  milvus.py  phoenix.py
kaizen/db/: sqlite_manager.py
kaizen/frontend/api/: routes.py
kaizen/frontend/cli/: __init__.py  cli.py
kaizen/frontend/client/: kaizen_client.py
kaizen/frontend/mcp/: __main__.py  mcp_server.py
kaizen/frontend/ui/: README.md  index.html
kaizen/frontend/ui/src/: App.tsx  (+1 more)
kaizen/llm/conflict_resolution/: conflict_resolution.py
kaizen/llm/tips/: clustering.py  tips.py
kaizen/schema/: conflict_resolution.py  core.py  exceptions.py  policy.py  tips.py
kaizen/sync/: __init__.py  phoenix_sync.py
kaizen/utils/: utils.py
operations/docker-testing/: index.html
overrides/: main.html
platform-integrations/: INSTALL_SPEC.md  install.sh
platform-integrations/bob/evolve-lite/: README.md  custom_modes.yaml
platform-integrations/bob/kaizen-full/: mcp.json
platform-integrations/bob/kaizen-lite/: install.sh
platform-integrations/claude/: marketplace.json
platform-integrations/codex/kaizen-lite/: AGENTS.kaizen.md  README.md  install.sh
plugins/kaizen/: INSTALL.md  README.md  SAVE_SKILL.md
plugins/kaizen/.claude-plugin/: plugin.json
plugins/kaizen/hooks/: hooks.json
plugins/kaizen/scripts/: retrieve_guidelines.py  save_guidelines.py
proposals/: e2e-manifest-recall-testing.md
reference/cli/: index.html
reference/policies/: index.html
results/: index.html
roo-skill/: .roomodes
roo-skills/: README.md  install.sh
roo-skills/kaizen-learn/: SKILL.md
roo-skills/kaizen-learn/scripts/: save.py
roo-skills/kaizen-recall/scripts/: get.py
sandbox/: Dockerfile  README.md  sample.env
scripts/: __init__.py  extract_trajectories.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py
tests/data/: trajectory.json
tests/e2e/: test_e2e_pipeline.py  test_e2e_segmentation.py  test_mcp.py
tests/fixtures/: appworld_venmo_task_trajectory.json
tests/llm/: test_conflict_resolution.py
tests/platform_integrations/: conftest.py  test_audit.py  test_bob_sharing.py  test_claude_retrieve_manifest.py  test_codex.py  test_codex_retrieve_manifest.py  test_codex_sharing.py  test_config.py  test_entity_io.py  test_entity_io_core.py  test_idempotency.py  test_plugin_structure.py  test_preservation.py  test_publish.py  test_retrieve.py  test_save_entities.py  test_skill_directory_names.py  test_stop_hooks_path_resolution.py  test_subscribe.py  test_sync.py
tests/unit/: test_cli.py  test_client.py  test_clustering.py  test_codex_skill_scripts.py  test_combine_tips.py  test_extract_trajectories.py  test_mcp_http_transport.py  test_mcp_launcher.py  test_mcp_server.py  test_milvus_backend.py  test_phoenix_sync.py  test_policy_schema.py  test_postgres_backend.py  test_segmentation.py  test_tips.py  test_tracing.py
tutorials/: index.html
tutorials/claude-code-demo/: index.html
(+123 files in other folders)
