[project]
name = "kaizen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "jinja2",
    "litellm",
    "pydantic",
    "pymilvus[milvus-lite]",
    "sentence-transformers",
    "typer>=0.9.0",
]

[project.scripts]
kaizen = "kaizen.frontend.cli.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "anyio",
    "python-dotenv>=1.2.1",
    "detect-secrets",
    "pre-commit"
]

[tool.uv.sources]
detect-secrets = { git = "https://github.com/ibm/detect-secrets", branch="master"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["explorations*"]
include = ["kaizen"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--ignore=explorations -m 'not phoenix'"
markers = [
    "e2e",
    "unit",
    "phoenix"
]
anyio_mode = "auto"