[project]
name = "kaizen"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=12.30.0",
    "fastmcp",
    "jinja2",
    "litellm",
    "pydantic",
    "pymilvus[milvus-lite]",
    "sentence-transformers",
    "typer>=0.9.0",
]

[project.optional-dependencies]
build = ["uv"]

tracing = [
    "openinference-instrumentation-openai",
    "openinference-instrumentation-litellm",
    "openinference-instrumentation-smolagents",
    "openinference-instrumentation-openai-agents",
]

examples = [
    "kaizen[tracing]",
    "smolagents",
    "openai-agents",
    "openai",
]

[project.scripts]
kaizen = "kaizen.cli.cli:app"

[dependency-groups]
dev = [
    "anyio",
    "detect-secrets",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "python-dotenv>=1.2.1",
    "python-semantic-release",
    "ruff",
    "types-requests>=2.32.4.20260107",
]

[tool.uv.sources]
detect-secrets = { git = "https://github.com/ibm/detect-secrets", branch="master"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["explorations*"]
include = ["kaizen"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "--ignore=explorations -m 'not phoenix'"
markers = [
    "e2e",
    "unit",
    "phoenix"
]
anyio_mode = "auto"

[tool.ruff]
line-length = 140
indent-width = 4

[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
build_command = '''
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    cp README.md README.md.bak
    perl -i -pe "s|src=\"docs/|src=\"https://raw.githubusercontent.com/AgentToolkit/kaizen/v$NEW_VERSION/docs/|g" README.md
    perl -i -pe "s|\]\(([A-Z_]*\.md)\)|](https://github.com/AgentToolkit/kaizen/blob/v$NEW_VERSION/\$1)|g" README.md
    perl -i -pe "s|\]\(docs/([^)]*)\)|](https://github.com/AgentToolkit/kaizen/blob/v$NEW_VERSION/docs/\$1)|g" README.md
    (cd kaizen/frontend/ui && rm -rf dist && npm ci && npm run build)
    if [ ! -s "kaizen/frontend/ui/dist/index.html" ]; then echo "UI build failed: dist/index.html missing or empty" && exit 1; fi
    uv build
    mv README.md.bak README.md
'''
tag_format = "v{version}"
commit_message = "chore: bump version to {version} [skip ci]"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "pymilvus.*",
    "smolagents.*",
    "milvus_lite.*",
    "openinference.*",
    "agents.*",
    "kaizen.schema.policy",
]
ignore_missing_imports = true
